# password-cracker

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
password_cracker/: cli.py
password_cracker/algorithms/: __init__.py  argon2_hasher.py  base_hasher.py  blake3_hasher.py  factory.py  md5_hasher.py  ripemd160_hasher.py  sha1_hasher.py  sha256_hasher.py  sha3_hasher.py
password_cracker/core/: __init__.py  cracker.py  hasher.py
password_cracker/strategies/: __init__.py  base_strategy.py  brute_force.py  combinator.py  dictionary.py  hybrid.py  rules.py
password_cracker/utils/: __init__.py  mask_parser.py
password_cracker/utils/mangling/: __init__.py  base_rules.py  rule_engine.py  wordlist.py
password_cracker/utils/mangling/rules/: default.rule
test_data/rules/: simple.rule
test_data/wordlists/: names.txt  numbers.txt  small.txt
tests/: test_cli.py  test_cracker.py  test_hasher.py  test_strategies.py  test_utils.py
